Massively update the website

--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -23,11 +23,8 @@ MathJax.Hub.Config({
 <div id="header-container">
 <div id="header">
 <div id="header-icon-text-container">
-<div id="header-icon-container" >
-<a href="home.html"><img src="./images/header.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
-</div>
 <div id="header-text-container">
-<a href="index.html">COIN-Lab@TCD</a>
+<a href="home.html">COIN-Lab@TCD</a>
 </div>
 </div>
 <div id="main">
@@ -39,15 +36,14 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html"|3>Home</a></div>
-<div class="menu-item"><a href="team.html"|3>Team&nbsp;Members</a></div>
+<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="..\publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="funding.html"|3>Funding</a></div>
+<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
-<div class="menu-item"><a href="opening.html"|3>Openings</a></div>
-<div class="menu-item"><a href="contact.html" class="current"|3>Contact</a></div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -59,7 +55,7 @@ MathJax.Hub.Config({
 <p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
 <ul>
-<li><p><a href="../index.html">Dr. Viet Quoc Pham</a></p>
+<li><p><a href="../index.html" target=&ldquo;blank&rdquo;>Dr. Viet Quoc Pham</a></p>
 </li>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
@@ -74,7 +70,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-24 01:04:33 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
