--- a/COIN/home.html
+++ b/COIN/home.html
@@ -23,11 +23,8 @@ MathJax.Hub.Config({
 <div id="header-container">
 <div id="header">
 <div id="header-icon-text-container">
-<div id="header-icon-container" >
-<a href="home.html"><img src="./images/header.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
-</div>
 <div id="header-text-container">
-<a href="index.html">COIN-Lab@TCD</a>
+<a href="home.html">COIN-Lab@TCD</a>
 </div>
 </div>
 <div id="main">
@@ -39,15 +36,14 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html" class="current"|3>Home</a></div>
-<div class="menu-item"><a href="team.html"|3>Team&nbsp;Members</a></div>
+<div class="menu-item"><a href="home.html" class="current">Home</a></div>
+<div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="..\publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="funding.html"|3>Funding</a></div>
+<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
-<div class="menu-item"><a href="opening.html"|3>Openings</a></div>
-<div class="menu-item"><a href="contact.html"|3>Contact</a></div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -55,7 +51,7 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
 </div>
-<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin. <a href="opening.html">Various positions</a> are available to join COIN-Lab@TCD. Please check, contact, and join us.</p>
+<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin. <a href="opening.html" target=&ldquo;blank&rdquo;>Various positions</a> are available to join COIN-Lab@TCD. Please check, contact, and join us.</p>
 <p><div id="Research Interests"></p>
 <h2>Research Interests (COIN)</h2>
 <ul>
@@ -78,18 +74,18 @@ MathJax.Hub.Config({
 </li>
 <li><p>[05/2023] Mai Le joined COIN-Lab as a visiting PhD student. Welcome aboard!</p>
 </li>
-<li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Please apply and join our COIN research group.</p>
+<li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf" target=&ldquo;blank&rdquo;><b>Two-fully funded PhD scholarships</b></a> are available. Please apply and join our COIN research group.</p>
 </li>
-<li><p>[01/2023] Dr. Viet Pham joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
+<li><p>[01/2023] Dr. Viet Pham joined <a href="https://connectcentre.ie/" target=&ldquo;blank&rdquo;>SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/" target=&ldquo;blank&rdquo;>SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
-<li><p>[01/2023] Dr. Viet Pham started his position of assistant professor with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
+<li><p>[01/2023] Dr. Viet Pham started his position of assistant professor with the <a href="https://www.scss.tcd.ie/" target=&ldquo;blank&rdquo;>School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>.</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="About COIN"></p>
 <h2>About COIN</h2>
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. 
-COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
+COIN-Lab is led by <a href="../index.html" target=&ldquo;blank&rdquo;>Dr. Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
 Our research is highly interdisciplinary and exploits an arsenal of tools from network optimization, game theory, machine learning, 
 statistics, and economics to design and build future network systems and improve emerging IT/wireless services and applications.
 Our research is sponsored by </p>
@@ -98,7 +94,7 @@ Our research is sponsored by </p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-24 01:04:33 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
