--- a/COIN/team.html
+++ b/COIN/team.html
@@ -23,11 +23,8 @@ MathJax.Hub.Config({
 <div id="header-container">
 <div id="header">
 <div id="header-icon-text-container">
-<div id="header-icon-container" >
-<a href="home.html"><img src="./images/header.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
-</div>
 <div id="header-text-container">
-<a href="index.html">COIN-Lab@TCD</a>
+<a href="home.html">COIN-Lab@TCD</a>
 </div>
 </div>
 <div id="main">
@@ -39,15 +36,14 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html"|3>Home</a></div>
-<div class="menu-item"><a href="team.html" class="current"|3>Team&nbsp;Members</a></div>
+<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="team.html" class="current">Team&nbsp;Members</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="..\publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="funding.html"|3>Funding</a></div>
+<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
-<div class="menu-item"><a href="opening.html"|3>Openings</a></div>
-<div class="menu-item"><a href="contact.html"|3>Contact</a></div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -57,9 +53,9 @@ MathJax.Hub.Config({
 </div>
 <p><div id="PI-container"></p>
 <h2>Principal Investigators</h2>
-<table class="imgtable"><tr><td>
-<img src="./images/people/Portrait_Viet.jpg" alt="profile pic" width="150px" />&nbsp;</td>
-<td align="left"><p><div id="PI">
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/Portrait_Viet.jpg" alt="profile pic" width="150px" /></div>
+<div id="text-container"><p><div id="PI">
 <b>Viet Quoc Pham</b>, Ph.D.</p>
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
@@ -68,63 +64,63 @@ MathJax.Hub.Config({
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
-<li><p><a href="..\Misc\Curriculum_Vitae_Pham.pdf">Curriculum Vitae</a>, 
-<a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, 
-<a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, 
-<a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
-<a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, 
-<a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, 
-and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Science</a></p>
+<li><p><a href="..\Misc\Curriculum_Vitae_Pham.pdf" target=&ldquo;blank&rdquo;>Curriculum Vitae</a>, 
+<a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target=&ldquo;blank&rdquo;>Google Scholar</a>, 
+<a href="https://www.researchgate.net/profile/Quoc-Viet-Pham" target=&ldquo;blank&rdquo;>ResearchGate</a>, 
+<a href="https://www.linkedin.com/in/pqv90/" target=&ldquo;blank&rdquo;>LinkedIn</a>, 
+<a href="https://orcid.org/0000-0002-9485-9216" target=&ldquo;blank&rdquo;>ORCID</a>, 
+<a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100" target=&ldquo;blank&rdquo;>Scopus</a>, 
+and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldquo;blank&rdquo;>Web of Science</a></p>
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
+</div></div>
 <p><div id="Student-container"></p>
 <h2>Students</h2>
-<table class="imgtable"><tr><td>
-<img src="./images/people/linh.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/linh.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Linh Thanh Nguyen</b></p>
 <ul>
-<li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
 <li><p>Research Topic: Blockchain-enabled intelligent security and privacy preservation for IoT data marketplace.</p>
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/tuan.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/tuan.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Tuan Van Tran</b></p>
 <ul>
-<li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
 <li><p>Research Topic: Adaptive framework for scaling federated learning (FL) in IoT systems. </p>
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/mengyan.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mengyan.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Mengyan Huang</b></p>
 <ul>
 <li><p>PhD Student, Xidian University, 2021/09 &ndash; Present.</p>
 </li>
-<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/10 - Present.</p>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/10 - Present.</p>
 </li>
 <li><p>Research Topic: beamforming/precoding, physical layer security, satellite communications, and NOMA.</p>
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/hoc.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/hoc.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Vu Thai Hoc</b> </p>
 <ul>
-<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03 - Present.</p>
+<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do" target=&ldquo;blank&rdquo;>University of Ulsan</a>, 2021/03 - Present.</p>
 </li>
 <li><p>Research Topic: Performance analysis and optimization of 6G short-packet communications. </p>
 </li>
@@ -132,15 +128,15 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/mai.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mai.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Le Thi Mai</b> </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2021/03 - Present.</p>
 </li>
-<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/05 - Present.</p>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/05 - Present.</p>
 </li>
 <li><p>PhD Thesis: AI-enabled resource allocation in intelligent wireless networks.</p>
 </li>
@@ -148,13 +144,13 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/thanh.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/thanh.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Dao Thien Thanh</b> </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Deep learning for automatic modulation classification and depth map.</p>
 </li>
@@ -162,13 +158,13 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/duong.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/duong.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Nguyen Minh Duong</b> </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Deep reinforcement learning and federated learning for 6G Internet-of-Things.</p>
 </li>
@@ -176,13 +172,13 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/daeil.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/daeil.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Daeil Noh</b></p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Deep learning for radio signal processing.</p>
 </li>
@@ -190,13 +186,13 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="./images/people/sangmin.png" alt="member pic" width="100px" />&nbsp;</td>
-<td align="left"><p><div id="Student">
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/sangmin.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
 <b>Sang Min Lee</b> </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Communication-efficient FL for massive IoT.</p>
 </li>
@@ -204,59 +200,59 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 </ul>
 <p></div></p>
-</td></tr></table>
+</div></div>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <p><b>Nadia Iradukunda</b> </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09 - 2022/08.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/09 - 2022/08.</p>
 </li>
 <li><p>Current position: Lecturer, Mount Kenya University, Rwanda.</p>
 </li>
 </ul>
 <p><b>Le Thi Mai</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03 - 2021/02.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/03 - 2021/02.</p>
 </li>
 <li><p>Current position: PhD student, Pusan National University, Korea.</p>
 </li>
 </ul>
 <p><b>Vo Ta Hoang</b> </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2020/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2020/02.</p>
 </li>
 <li><p>Current position: Lecturer, Thuyloi University, Vietnam.</p>
 </li>
 </ul>
 <p><b>Hoang Huu Trung</b> </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09 - 2021/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2018/09 - 2021/02.</p>
 </li>
 <li><p>Current position: Lecturer, Hue University, Vietnam.</p>
 </li>
 </ul>
 <p><b>Nguyen Tien Hoang</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 <li><p>Current position: QA Project Leader, LG Innotek, Vietnam.</p>
 </li>
 </ul>
 <p><b>Maurice Nduwayezu</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 <li><p>Current position: PhD student, SeoulTech, Korea.</p>
 </li>
 </ul>
 <p><b>Girmay Gebremariam Gebrelibanos</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08. </p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08. </p>
 </li>
 </ul>
 <p><b>Akmal Azizan bin Md Zin</b></p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 </ul>
 <p></div></p>
@@ -266,7 +262,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-24 01:04:33 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
