--- a/activity.html
+++ b/activity.html
@@ -38,68 +38,67 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
-<div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="activity.html" class="current"|3>Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="grantaward.html"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="activity.html" class="current">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="COIN/home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="module.html"|3>Modules</a></div>
-<div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="module.html">Modules</a></div>
+<div class="menu-item"><a href="opendata.html">Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
 <h1>Professional Activities</h1>
-<div id="subtitle">
+<div id="subtitle">
 </div>
 </div>
 <p><div id="Editor"></p>
 <h2>Editor</h2>
 <ul>
-<li><p><a href="https://www.comsoc.org/publications/journals/ieee-comml">IEEE Communications Letters</a>, 2023 - Present.</p>
+<li><p><a href="https://www.comsoc.org/publications/journals/ieee-comml" target=&ldquo;blank&rdquo;>IEEE Communications Letters</a>, 2023 - Present.</p>
 </li>
-<li><p><a href="https://www.nature.com/srep/">Nature Scientific Reports</a>, 2022 - Present.</p>
+<li><p><a href="https://www.nature.com/srep/" target=&ldquo;blank&rdquo;>Nature Scientific Reports</a>, 2022 - Present.</p>
 </li>
-<li><p><a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a>, 2020 - Present.</p>
+<li><p><a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications" target=&ldquo;blank&rdquo;>Journal of Network and Computer Applications</a>, 2020 - Present.</p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Guest Editor"></p>
 <h2>Guest Editor</h2>
 <ul>
-<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine/cfp/federated-learning-industrial-internet">IEEE Internet of Things Magazine</a>, Federated Learning for Industrial Internet of Things, 2023 - Present.</p>
+<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine/cfp/federated-learning-industrial-internet" target=&ldquo;blank&rdquo;>IEEE Internet of Things Magazine</a>, Federated Learning for Industrial Internet of Things, 2023 - Present.</p>
 </li>
-<li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf">IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023 - Present.</p>
+<li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf" target=&ldquo;blank&rdquo;>IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023 - Present.</p>
 </li>
-<li><p><a href="https://www.sciencedirect.com/journal/computer-communications/about/call-for-papers">Computer Communications</a>, Intelligent Device-free Sensing for Future Internet of Things: Emerging Trends and Challenges, 2023 - Present.</p>
+<li><p><a href="https://www.sciencedirect.com/journal/computer-communications/about/call-for-papers" target=&ldquo;blank&rdquo;>Computer Communications</a>, Intelligent Device-free Sensing for Future Internet of Things: Emerging Trends and Challenges, 2023 - Present.</p>
 </li>
-<li><p><a href="https://ieee-iotj.org/">IEEE Internet of Things Journal</a>, Lead Guest Editor, Aerial Computing for the Internet-of-Things (IoT), 2021 - 2022.</p>
+<li><p><a href="https://ieee-iotj.org/" target=&ldquo;blank&rdquo;>IEEE Internet of Things Journal</a>, Lead Guest Editor, Aerial Computing for the Internet-of-Things (IoT), 2021 - 2022.</p>
 </li>
-<li><p><a href="https://www.mdpi.com/journal/sensors">Sensors</a>, Security and Privacy in the Internet of Things (IoT), 2021 - 2022.</p>
+<li><p><a href="https://www.mdpi.com/journal/sensors" target=&ldquo;blank&rdquo;>Sensors</a>, Security and Privacy in the Internet of Things (IoT), 2021 - 2022.</p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="TPC Chair/Track Chair"></p>
 <h2>TPC Chair/Track Chair</h2>
 <ul>
-<li><p>2023: <a href="https://soict.org/">SoICT 2023</a>, <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> - &ldquo;Edge Learning over Next-Generation Networks&rdquo; Workshop</p>
+<li><p>2023: <a href="https://soict.org/" target=&ldquo;blank&rdquo;>SoICT 2023</a>, <a href="https://globecom2023.ieee-globecom.org/" target=&ldquo;blank&rdquo;>IEEE GLOBECOM 2023</a> - &ldquo;Edge Learning over Next-Generation Networks&rdquo; Workshop</p>
 </li>
-<li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/">EAI GameNets 2022</a>, <a href="https://soict.org/">SoICT 2022</a>, <a href="https://atc-conf.org/">IEEE ATC 2022</a></p>
+<li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/" target=&ldquo;blank&rdquo;>EAI GameNets 2022</a>, <a href="https://soict.org/" target=&ldquo;blank&rdquo;>SoICT 2022</a>, <a href="https://atc-conf.org/" target=&ldquo;blank&rdquo;>IEEE ATC 2022</a></p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Publicity Chair/Co-Chair"></p>
 <h2>Publicity Chair/Co-Chair</h2>
 <ul>
-<li><p>2023: <a href="http://www.ic-wcsp.org/2023/">SCSP 2023</a>
+<li><p>2023: <a href="http://www.ic-wcsp.org/2023/" target=&ldquo;blank&rdquo;>SCSP 2023</a>
 </p>
 </li>
 </ul>
@@ -117,7 +116,7 @@ MathJax.Hub.Config({
 <li><p>2020: 2nd ICCIS, IEEE WCNC, IEEE ICC, IEEE VTC2020, IEEE IEEE STP-CPS (IEEE SECON)</p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Invited Referee for Journals"></p>
 <h2>Invited Referee for Journals</h2>
@@ -201,7 +200,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:40PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
