--- a/grantaward.html
+++ b/grantaward.html
@@ -38,60 +38,56 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
-<div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="grantaward.html" class="current"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html" class="current">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="COIN/home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="module.html"|3>Modules</a></div>
-<div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="module.html">Modules</a></div>
+<div class="menu-item"><a href="opendata.html">Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
 <h1>Grants and Awards</h1>
-<div id="subtitle">
+<div id="subtitle">
 </div>
 </div>
 <p><div id="Grants"></p>
 <h2>Grants</h2>
 <ul>
-<li><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
-Principal Investigator. Project EC20231518 <br /> 
-Title: &ldquo;Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning&rdquo;
+<li><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
+Principal Investigator. Project EC20231518 <br /> 
+Title: &ldquo;Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning&rdquo;
 </p>
 </li>
-<li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
-Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
-Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;
+<li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
+Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
+Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;
 </p>
 </li>
-<li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
-Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
-Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;
-</p>
-</li>
-<li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
-Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
-Title: &ldquo;Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications&rdquo;
-</p>
-</li>
-<li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
-Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
-Title: &ldquo;Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks&rdquo;
-</p>
-</li>
-<li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
-Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
+<li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
+Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
+Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;
+
+- <b>NRF Basic Science and Research</b> (100,000,000 KRW<i>year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
+Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
+Title: &ldquo;Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications&rdquo;
+
+- <b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW</i>year, 2018-2019) <br /> 
+Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
+Title: &ldquo;Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks&rdquo;
+
+- <b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
+Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
 Pusan National University</p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Awards"></p>
 <h2>Awards and Prizes</h2>
@@ -123,7 +119,7 @@ Pusan National University</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
