--- a/module.html
+++ b/module.html
@@ -38,17 +38,16 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
-<div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="grantaward.html"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="COIN/home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="module.html" class="current"|3>Modules</a></div>
-<div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="module.html" class="current">Modules</a></div>
+<div class="menu-item"><a href="opendata.html">Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -77,56 +76,56 @@ MathJax.Hub.Config({
 <li><p>2016: Teaching assistant, Course: Fundamentals of Java</p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Courseworks"></p>
 <h2>Courseworks</h2>
 <ul>
-<li><p>Network Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/">https://web.stanford.edu/~boyd/cvxbook/</a></p>
+<li><p>Network Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/~boyd/cvxbook/</a></p>
 </li>
-<li><p>Game Theory in Wireless and Communication Networks: <a href="http://www2.egr.uh.edu/~zhan2/game_theory_course/">http://www2.egr.uh.edu/~zhan2/game_theory_course/</a></p>
+<li><p>Game Theory in Wireless and Communication Networks: <a href="http://www2.egr.uh.edu/~zhan2/game_theory_course/" target=&ldquo;blank&rdquo;>http://www2.egr.uh.edu/~zhan2/game_theory_course/</a></p>
 </li>
-<li><p>Selected Topics on Optimization: <a href="http://wireless.egr.uh.edu/Optimization/index.htm">http://wireless.egr.uh.edu/Optimization/index.htm</a></p>
+<li><p>Selected Topics on Optimization: <a href="http://wireless.egr.uh.edu/Optimization/index.htm" target=&ldquo;blank&rdquo;>http://wireless.egr.uh.edu/Optimization/index.htm</a></p>
 </li>
-<li><p>Introduction to Deep Learning: <a href="https://courses.d2l.ai/berkeley-stat-157/index.html">https://courses.d2l.ai/berkeley-stat-157/index.html</a></p>
+<li><p>Introduction to Deep Learning: <a href="https://courses.d2l.ai/berkeley-stat-157/index.html" target=&ldquo;blank&rdquo;>https://courses.d2l.ai/berkeley-stat-157/index.html</a></p>
 </li>
-<li><p>Introduction to Machine Learning: <a href="http://ee104.stanford.edu/">http://ee104.stanford.edu/</a></p>
+<li><p>Introduction to Machine Learning: <a href="http://ee104.stanford.edu/" target=&ldquo;blank&rdquo;>http://ee104.stanford.edu/</a></p>
 </li>
-<li><p>Introduction to Reinforcement Learning: <a href="https://web.stanford.edu/class/cs234/">https://web.stanford.edu/class/cs234/</a></p>
+<li><p>Introduction to Reinforcement Learning: <a href="https://web.stanford.edu/class/cs234/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/class/cs234/</a></p>
 </li>
-<li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/">https://web.stanford.edu/&nbsp;boyd/vmls/</a></p>
+<li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/&nbsp;boyd/vmls/</a></p>
 </li>
-<li><p>Machine Learning Specialization: <a href="https://www.coursera.org/specializations/machine-learning-introduction">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
+<li><p>Machine Learning Specialization: <a href="https://www.coursera.org/specializations/machine-learning-introduction" target=&ldquo;blank&rdquo;>https://www.coursera.org/specializations/machine-learning-introduction</a></p>
 </li>
 </ul>
-<p></div>
+<p></div>
 </p>
 <p><div id="Ebooks"></p>
 <h2>Ebooks</h2>
 <ul>
-<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/">https://web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
+<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
 </li>
-<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html">http://www.incompleteideas.net/book/the-book-2nd.html</a></p>
+<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html" target=&ldquo;blank&rdquo;>http://www.incompleteideas.net/book/the-book-2nd.html</a></p>
 </li>
-<li><p>Dive into Deep Learning: <a href="https://d2l.ai/">https://d2l.ai/</a></p>
+<li><p>Dive into Deep Learning: <a href="https://d2l.ai/" target=&ldquo;blank&rdquo;>https://d2l.ai/</a></p>
 </li>
-<li><p>Graph Neural Networks: Foundations, Frontiers, and Applications: <a href="https://graph-neural-networks.github.io/index.html">https://graph-neural-networks.github.io/index.html</a></p>
+<li><p>Graph Neural Networks: Foundations, Frontiers, and Applications: <a href="https://graph-neural-networks.github.io/index.html" target=&ldquo;blank&rdquo;>https://graph-neural-networks.github.io/index.html</a></p>
 </li>
-<li><p>Reinforcement Learning and Stochastic Optimization: <a href="https://castlelab.princeton.edu/rlso/">https://castlelab.princeton.edu/rlso/</a></p>
+<li><p>Reinforcement Learning and Stochastic Optimization: <a href="https://castlelab.princeton.edu/rlso/" target=&ldquo;blank&rdquo;>https://castlelab.princeton.edu/rlso/</a></p>
 </li>
-<li><p>Computer Networking: A Top-Down Approach: <a href="https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319">https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319</a></p>
+<li><p>Computer Networking: A Top-Down Approach: <a href="https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319" target=&ldquo;blank&rdquo;>https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319</a></p>
 </li>
-<li><p>Computer Architecture: A Quantitative Approach: <a href="https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X">https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X</a></p>
+<li><p>Computer Architecture: A Quantitative Approach: <a href="https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X" target=&ldquo;blank&rdquo;>https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X</a></p>
 </li>
 </ul>
-<p></div>
-
+<p></div>
+
 </p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:27:31 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
