--- a/opendata.html
+++ b/opendata.html
@@ -38,64 +38,63 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
-<div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="grantaward.html"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="COIN/home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="module.html"|3>Modules</a></div>
-<div class="menu-item"><a href="opendata.html" class="current"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="module.html">Modules</a></div>
+<div class="menu-item"><a href="opendata.html" class="current">Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
 <h1>Datasets and Reproducible Code</h1>
-<div id="subtitle">
+<div id="subtitle">
 </div>
 </div>
 <p><div id="Datasets"></p>
 <h2>Datasets</h2>
 <ul>
-<li><p>Microsoft Malware Classification Challenge (BIG 2015): <a href="https://www.kaggle.com/c/malware-classification/data">https://www.kaggle.com/c/malware-classification/data</a></p>
+<li><p>Microsoft Malware Classification Challenge (BIG 2015): <a href="https://www.kaggle.com/c/malware-classification/data" target=&ldquo;blank&rdquo;>https://www.kaggle.com/c/malware-classification/data</a></p>
 </li>
-<li><p>Recordings of Digital and Analog Modulation Types (RadioML): <a href="https://www.deepsig.io/datasets">https://www.deepsig.io/datasets</a></p>
+<li><p>Recordings of Digital and Analog Modulation Types (RadioML): <a href="https://www.deepsig.io/datasets" target=&ldquo;blank&rdquo;>https://www.deepsig.io/datasets</a></p>
 </li>
-<li><p>Power Allocation in Multi-cell Massive MIMO: <a href="https://data.ieeemlc.org/Ds2Detail">https://data.ieeemlc.org/Ds2Detail</a></p>
+<li><p>Power Allocation in Multi-cell Massive MIMO: <a href="https://data.ieeemlc.org/Ds2Detail" target=&ldquo;blank&rdquo;>https://data.ieeemlc.org/Ds2Detail</a></p>
 </li>
-<li><p>IEEE Machine Learning for Communications ETI: <a href="https://mlc.committees.comsoc.org/">https://mlc.committees.comsoc.org/</a></p>
+<li><p>IEEE Machine Learning for Communications ETI: <a href="https://mlc.committees.comsoc.org/" target=&ldquo;blank&rdquo;>https://mlc.committees.comsoc.org/</a></p>
 </li>
-<li><p>Drone Remote Controller RF Signal Dataset: <a href="https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset">https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset</a>
+<li><p>Drone Remote Controller RF Signal Dataset: <a href="https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset" target=&ldquo;blank&rdquo;>https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset</a>
 </p>
 </li>
 </ul>
 <p><div id="Reproducible Code"></p>
 <h2>Reproducible Code</h2>
 <ul>
-<li><p><a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">OFDMsym-Net for OFDM Modulation Classification</a></p>
+<li><p><a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification" target=&ldquo;blank&rdquo;>OFDMsym-Net for OFDM Modulation Classification</a></p>
 </li>
-<li><p><a href="https://github.com/vannguyentoan/LPI-Radar-Waveform-Recognition">LPI-Net for LPI Radar Waveform Recognition</a> </p>
+<li><p><a href="https://github.com/vannguyentoan/LPI-Radar-Waveform-Recognition" target=&ldquo;blank&rdquo;>LPI-Net for LPI Radar Waveform Recognition</a> </p>
 </li>
-<li><p><a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">DroneRF Dataset and RF-UAVNet for RF-based Drone Surveillance Systems</a></p>
+<li><p><a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL" target=&ldquo;blank&rdquo;>DroneRF Dataset and RF-UAVNet for RF-based Drone Surveillance Systems</a></p>
 </li>
-<li><p><a href="https://github.com/ThienHuynhThe/MCNet">MCNet for Automatic Modulation Classification</a></p>
+<li><p><a href="https://github.com/ThienHuynhThe/MCNet" target=&ldquo;blank&rdquo;>MCNet for Automatic Modulation Classification</a></p>
 </li>
-<li><p><a href="https://github.com/phamqv/Energy-Efficient-FL-Wireless-Powered-UAV">Federated Learning over UAV-enabled Wireless Powered Communications</a></p>
+<li><p><a href="https://github.com/phamqv/Energy-Efficient-FL-Wireless-Powered-UAV" target=&ldquo;blank&rdquo;>Federated Learning over UAV-enabled Wireless Powered Communications</a></p>
 </li>
-<li><p><a href="https://github.com/phamqv/WOA_5G_Communications">Whale Optimization Algorithm for Resource Allocation</a></p>
+<li><p><a href="https://github.com/phamqv/WOA_5G_Communications" target=&ldquo;blank&rdquo;>Whale Optimization Algorithm for Resource Allocation</a></p>
 </li>
-<li><p><a href="https://github.com/phamqv/UAV-NOMA-Visible-Light-Communications-Swarm-Intelligence">Swarm Intelligence and Machine Learning for UAV-assisted VLC-NOMA</a></p>
+<li><p><a href="https://github.com/phamqv/UAV-NOMA-Visible-Light-Communications-Swarm-Intelligence" target=&ldquo;blank&rdquo;>Swarm Intelligence and Machine Learning for UAV-assisted VLC-NOMA</a></p>
 </li>
 </ul>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
