--- a/publication.html
+++ b/publication.html
@@ -38,14 +38,13 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
 <div class="menu-item"><a href="index.html"|3>Home</a></div>
 <div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html" class="current"|3>Publications</a></div>
 <div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="COIN/home.html"|3>COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="module.html"|3>Modules</a></div>
 <div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
@@ -59,6 +58,7 @@ MathJax.Hub.Config({
 <p><b>Copyright</b>: Materials presented here are to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's copyright. In most cases, these works may not be reposted without the explicit permission of the copyright holder. </p>
 <p><b>IEEE Copyright Notice</b>: © 2007-2013 IEEE. Personal use of this material is permitted. Permission from IEEE must be obtained for all other uses, in any current or future media, including reprinting/republishing this material for advertising or promotional purposes, creating new collective works, for resale or redistribution to servers or lists, or reuse of any copyrighted component of this work in other works.</p>
 <p><b>Reproducible Code</b>: The provided simulation code can be freely modified and distributed with the original copyright notice. Using the code with your own risk.</p>
+<p><b>Research Profiles</b>: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;alert_preview_top_rm=2&amp;sortby=pubdate">Google Scholar</a> and <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>.</p>
 <p><div id="Books"></p>
 <h2>Books</h2>
 <ol>
@@ -136,7 +136,7 @@ MathJax.Hub.Config({
 <p><div id="2023 and Early Access"></p>
 <h2>2023 and Early Access</h2>
 <ol>
-<li><p>T.-T. Dao, D.-I. Noh, <b>Q.-V. Pham</b>, M. Hasegawa, H. Sekiya, and W.-J. Hwang, &ldquo;<a href="">VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; <i>IEEE Communications Letters</i>, early access.</p>
+<li><p>T.-T. Dao, D.-I. Noh, <b>Q.-V. Pham</b>, M. Hasegawa, H. Sekiya, and W.-J. Hwang, &ldquo;<a href="https://dx.doi.org/10.1109/LCOMM.2023.3336985">VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; <i>IEEE Communications Letters</i>, early access.</p>
 </li>
 <li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10322742">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; <i>IEEE Network</i>, early access.</p>
 </li>
@@ -438,7 +438,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 17:39:29 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
