--- a/eduwork.html
+++ b/eduwork.html
@@ -38,17 +38,16 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">About me</div>
-<div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html" class="current"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html"|3>Publications</a></div>
-<div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="grantaward.html"|3>Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="COIN/home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="module.html"|3>Modules</a></div>
-<div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="module.html">Modules</a></div>
+<div class="menu-item"><a href="opendata.html">Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -69,8 +68,8 @@ MathJax.Hub.Config({
 <li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
 </li>
 </ul>
-<p></div>
-
+<p></div>
+
 </p>
 <p><div id="Academic Experience"></p>
 <h2>Academic Experience</h2>
@@ -92,8 +91,8 @@ MathJax.Hub.Config({
 <li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
 </li>
 </ul>
-<p></div>
-
+<p></div>
+
 </p>
 <p><div id="Administrative Experience"></p>
 <h2>Administrative Experience</h2>
@@ -101,8 +100,8 @@ MathJax.Hub.Config({
 <li><p>Aug. 2023 - Present: Demonstrator and Teaching Assistant Director, School of Computer Science and Statistics, Trinity College Dublin, Ireland</p>
 </li>
 </ul>
-<p></div>
-
+<p></div>
+
 </p>
 <p><div id="Visiting Experience"></p>
 <h2>Visiting Experience</h2>
@@ -118,7 +117,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
